--- a/config_sample.env
+++ b/config_sample.env
@@ -8,7 +8,7 @@ TELEGRAM_HASH = ""
 BOT_TOKEN = ""
 
 # Update
-UPSTREAM_REPO = "https://github.com/Dawn-India/Z-Mirror"
+UPSTREAM_REPO = "https://github.com/Tamilupdates/Z-Mirror"
 UPSTREAM_BRANCH = "main"
 
 # OPTIONAL CONFIG
